--- a/index.html
+++ b/index.html
@@ -420,8 +420,14 @@
       <article class="blog-post">
         <h3><a href="landing-zone-principles.html">Designing Enterprise Cloud Landing Zones</a></h3>
         <p>Key principles for building scalable, governed, and secure cloud foundations.</p>
-      </article>
+      
+    <div class="blog-post">
+  <h3><a href="cloud-modernization-strategy.html">Cloud Migration Beyond Lift-and-Shift</a></h3>
+  <p>Why modernization — not just migration — unlocks real cloud value.</p>
+</div>
+        </article>
     </section>
+
 
     <footer id="contact" aria-labelledby="contact-title">
       <h2 id="contact-title" style="margin-top:0;">Contact</h2>
