--- a/index.html
+++ b/index.html
@@ -396,27 +396,27 @@
     </section>
 
     <section id="expertise" aria-labelledby="expertise-title">
-      <h2 id="expertise-title">Core Expertise</h2>
+      <h2 id="expertise-title">Strategic Focus Areas</h2>
       <ul>
-        <li>Enterprise &amp; Solution Architecture</li>
-        <li>Cloud Migration &amp; Modernization</li>
+        <li>Enterprise Architecture & Target-State Design</li>
+        <li>Cloud Strategy, Migration & Modernization</li>
         <li>Cloud Landing Zones &amp; Platform Engineering</li>
-        <li>DevOps Transformation &amp; CI/CD Strategy</li>
-        <li>Cloud Governance, Security &amp; Compliance</li>
-        <li>FinOps &amp; Cost Optimization</li>
+        <li>DevSecOps Transformation &amp; CI/CD Strategy</li>
+        <li>Cloud Governance, Risk & Compliance Frameworks</li>
+        <li>Cloud Financial Management (FinOps) Strategy</li>
       </ul>
     </section>
 
     <section id="work" aria-labelledby="work-title">
-      <h2 id="work-title">Selected Work</h2>
+      <h2 id="work-title">Strategic Initiatives Led</h2>
       <article class="project">
         <h3>Enterprise Cloud Landing Zone</h3>
-        <p>Designed and implemented a secure Azure landing zone across multiple business units.</p>
+        <p>Led the definitionof an enterprise Azure landing zone strategy, establishing governance, security guardrails, and platform standards.</p>
       </article>
     </section>
 
     <section id="blog" aria-labelledby="blog-title">
-      <h2 id="blog-title">Thought Leadership</h2>
+      <h2 id="blog-title">Insights & Thought Leadership</h2>
       <article class="blog-post">
         <h3><a href="landing-zone-principles.html">Designing Enterprise Cloud Landing Zones</a></h3>
         <p>Key principles for building scalable, governed, and secure cloud foundations.</p>
