--- a/index.html
+++ b/index.html
@@ -376,12 +376,12 @@
       <div>
         <h1 id="name">Santhosh Kumar Chandrashekar</h1>
         <p class="subtitle">
-          Portfolio Architect (Enterprise Architecture) · Cloud, DevOps &amp; Solution Architecture · Azure &amp; AWS
+          TOGAF® Certified Enterprise Architect · Cloud & DevOps Portfolio Leader
         </p>
         <p>
-          I work within the Enterprise Architecture function as a Portfolio Architect, shaping enterprise-scale cloud platforms,
-          solution architectures, and DevOps ecosystems. I lead cloud migration and modernization programs that help organizations
-          build secure, scalable, and future-ready digital foundations.
+          I help organisations modernise confidently by shaping clear cloud, platform, and DevOps strategies that enable scale, resilience, and long‑term business value.
+          With a blended foundation in enterprise architecture, solution architecture, platform engineering, and operational leadership,
+          I bring a holistic, outcome‑driven approach to Cloud & DevOps transformation; ensuring technology decisions create long‑term business value.
         </p>
       </div>
     </section>
@@ -389,9 +389,8 @@
     <section id="about" aria-labelledby="about-title">
       <h2 id="about-title">About</h2>
       <p>
-        With 14 years of experience in cloud, DevOps, solution architecture, engineering, and support background,
-        I operate at the intersection of Enterprise Architecture, platform strategy, and large-scale transformation
-        across Azure and AWS environments.
+        I’m a TOGAF®‑certified Enterprise Architect with 14 years of experience across cloud, DevOps, solution architecture, platform engineering, and operations. 
+        I specialise in Cloud & DevOps Portfolio Architecture, focusing on target‑state design, technology roadmapping, and platform strategies that simplify complexity and support sustainable enterprise‑wide transformation.
       </p>
     </section>
 
@@ -400,8 +399,8 @@
       <ul>
         <li>Enterprise Architecture & Target-State Design</li>
         <li>Cloud Strategy, Migration & Modernization</li>
-        <li>Cloud Landing Zones &amp; Platform Engineering</li>
-        <li>DevSecOps Transformation &amp; CI/CD Strategy</li>
+        <li>Cloud Landing Zones & Architecture Patterns</li>
+        <li>DevSecOps Transformation </li>
         <li>Cloud Governance, Risk & Compliance Frameworks</li>
         <li>Cloud Financial Management (FinOps) Strategy</li>
       </ul>
@@ -411,7 +410,7 @@
       <h2 id="work-title">Strategic Initiatives Led</h2>
       <article class="project">
         <h3>Enterprise Cloud Landing Zone</h3>
-        <p>Led the definitionof an enterprise Azure landing zone strategy, establishing governance, security guardrails, and platform standards.</p>
+        <p>Led the definition of an enterprise Azure landing zone strategy, establishing governance, security guardrails, and platform standards.</p>
       </article>
     </section>
 
