--- a/index.html
+++ b/index.html
@@ -391,6 +391,10 @@
       <p>
         I’m a TOGAF®‑certified Enterprise Architect with 14 years of experience across cloud, DevOps, solution architecture, platform engineering, and operations. 
         I specialise in Cloud & DevOps Portfolio Architecture, focusing on target‑state design, technology roadmapping, and platform strategies that simplify complexity and support sustainable enterprise‑wide transformation.
+        
+        "At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction."
+        
+        My goal is to design technology foundations and roadmaps that evolve with the organisation, support modern ways of working, and deliver long‑term business value.
       </p>
     </section>
 
