--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   <header class="site-header" id="siteHeader">
     <div class="header-inner">
       <!-- Brand links to top -->
-      <a id="homeLink" href="#top" class="brand home-link">Santhosh Kumar C</a>
+      <a id="homeLink" href="#top" class="brand home-link">SANTHOSH KUMAR</a>
 
       <!-- Desktop links -->
       <nav class="nav-links" aria-label="Primary">
@@ -376,12 +376,12 @@
       <div>
         <h1 id="name">Santhosh Kumar Chandrashekar</h1>
         <p class="subtitle">
-          TOGAF® Certified Enterprise Architect · Cloud & DevOps Portfolio Leader
+          TOGAF® Certified Architect | Cloud & DevOps Portfolio Strategy Leader
         </p>
         <p>
-          I help organisations modernise confidently by shaping clear cloud, platform, and DevOps strategies that enable scale, resilience, and long‑term business value.
-          With a blended foundation in enterprise architecture, solution architecture, platform engineering, and operational leadership,
-          I bring a holistic, outcome‑driven approach to Cloud & DevOps transformation; ensuring technology decisions create long‑term business value.
+          I help organisations modernize with confidence by shaping cloud, platform, and DevOps strategy that enables scale, resilience, and long‑term business value.
+          With a blended foundation in enterprise architecture, solution architecture, platform engineering, and operations,
+          I bring a holistic, outcome‑driven approach to technology transformation, ensuring architectural decisions translate into real business impact.
         </p>
       </div>
     </section>
@@ -389,8 +389,9 @@
     <section id="about" aria-labelledby="about-title">
       <h2 id="about-title">About</h2>
       <p>
-        I’m a TOGAF®‑certified Enterprise Architect with 14 years of experience across cloud, DevOps, solution architecture, platform engineering, and operations. 
-        I specialise in Cloud & DevOps Portfolio Architecture, focusing on target‑state design, technology roadmapping, and platform strategies that simplify complexity and support sustainable enterprise‑wide transformation.
+        I’m a TOGAF®‑certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, platform engineering, and operations. 
+        Today, I specialise in Cloud & DevOps Portfolio Architecture within the Enterprise Architecture structure, focusing on target‑state design, technology roadmapping, 
+        and platform strategies that reduce complexity and enable sustainable enterprise transformation.
         
         "At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction."
         
