--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       </p>
 
       <!-- Paragraph 2: the quote, italic and on its own line -->
-      <p><em>"At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction."</em></p>
+      <p><strong><em>"At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction."</em></strong></p>
 
       <!-- Paragraph 3: the next line on a new line -->
       <p>
